--- a/css/app.css
+++ b/css/app.css
@@ -5,15 +5,16 @@
 }
 
 article{
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 11px;
+  margin-right: 11px;
 }
 
 
 
 .wrapper {
     width: 100%;
-    max-width: 960px;
+   /*  max-width: 960px; */
+    max-width: 1330px;
     margin: 0 auto;
     position: relative;
     top: 5rem;
@@ -21,8 +22,9 @@ article{
   }
 
   footer{
-    position: fixed;
+    position: relative;
     bottom: 0;
+    margin-top: 5rem;
     background: #dbdcdc;
     width: 100%;
     color: black;
@@ -40,33 +42,5 @@ article{
 
   @media (min-width: 550px) {
 
-    .wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr );
-    grid-template-rows: auto;
-    grid-column-gap: 1em;
-    grid-row-gap: 15px;
-    }
 
-    .mainheader {
-      grid-column: col / span 12;
-      grid-row: row ;
-    }
-
-    .mainfooter {
-      grid-column: col / span 12;
-      grid-row: row 3 ;
-    }
-
-    .content {
-     /*  grid-column: col 5 / span 8;
-      grid-row: row 2 ; */
-    grid-column: col 8 / span 5;
-    grid-row: row 2;
-    }
-
-    .aside-left {
-      grid-column: col / span 8;
-      grid-row: row 2 ;
-    }
 }
