--- a/css/all-articles.css
+++ b/css/all-articles.css
@@ -176,10 +176,7 @@ footer {
    
 }
 
-.single-post:hover {
-    transform: scale(0.99);
-    
-}
+
 
 .single-post-block{
     width: 100%;
@@ -240,6 +237,8 @@ footer {
    @media (min-width: 620px){
 .splashwrapper h2 {
     font-size: 6rem;
+    width: 65%;
+    margin-left: 3rem;
 }
 article {
     margin-left: 33px;
