--- a/css/all-articles.css
+++ b/css/all-articles.css
@@ -4,6 +4,10 @@ padding: 0;
 box-sizing: border-box;
 }
 
+body > section > div > ol.posts > a{
+    display: none;
+}
+
 body {
     color: black;
     font: 1rem/1.3 sans-serif;
@@ -58,6 +62,8 @@ footer {
     text-align: left;
 }
 
+
+
 .breadcrumbs{
    
   margin-top: 1rem;
@@ -69,7 +75,7 @@ footer {
     width: 100%;
     height: 80vh;
     background-image: url(/img/the-regrettes-2017-cr-Chade-Kamenshine-billboard-1548-compressed\ 1.png);
-    background-position: 50% 0px;
+    background-position: 63% 0px;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Gotham", "Helvetica Neue", Helvetica, Arial, "sans-serif";
@@ -117,6 +123,8 @@ footer {
     display: grid;
     grid-gap: 2rem;
   }
+
+
    /* SPLASH SECTION END  */
 
      /* post styles  */
@@ -235,11 +243,13 @@ footer {
 
 
    @media (min-width: 620px){
-.splashwrapper h2 {
-    font-size: 6rem;
-    width: 65%;
-    margin-left: 3rem;
-}
+    .splashwrapper h2{
+        font-size: 4rem;
+        width: 62%;
+        margin-left: 3rem;
+        margin: 0 auto;
+        text-align: center;
+      }
 article {
     margin-left: 33px;
     margin-right: 33px;
@@ -272,6 +282,8 @@ article {
      display: flex;
      flex-direction: column;
  }
+
+ #splashsection {background-position: 50% 0px;
     }
 
    @media only screen and (min-width: 900px) {
@@ -363,3 +375,4 @@ article {
     }
     
     }
+}
