--- a/css/styles.css
+++ b/css/styles.css
@@ -116,17 +116,21 @@
     background: rgba(0, 0, 0, 0.5);
   }
   .bannerwrapper .text {
-    font-family: Arial;
-    font-size: 1em;
-    color: white;
-    text-shadow: 0.1em 0.1em 0.5em rgb(0 0 0 / 50%);
-    margin: 0;
-    position: absolute;
-    margin-left: 15px;
-    margin-right: 15px;
-    text-align: center;
-    display: grid;
-    grid-gap: 0.8rem;
+      font-size: 1.4rem;
+      color: white;
+      text-shadow: 0.1em 0.1em 0.5em rgb(0 0 0 / 50%);
+      margin: 0;
+      position: absolute;
+      margin-left: 15px;
+      margin-right: 15px;
+      text-align: center;
+      display: grid;
+      grid-gap: 0.8rem;
+  
+  }
+
+  .bannerwrapper .text p {
+    font-size: xxx-large;
   }
 
   .bannerwrapper .text p strong {
@@ -333,7 +337,7 @@
         width: 100%;
         height: 60vh;
         background-image: url(/img/photo2.jpg);
-        background-position: 27% -95px;
+        background-position: 0% 0px;
         background-repeat: no-repeat;
         background-size: cover;
         font-family: "Gotham", "Helvetica Neue", Helvetica, Arial, "sans-serif";
