added hrefs to single article

--- a/css/single-article.css
+++ b/css/single-article.css
@@ -190,7 +190,8 @@ article{
 
 
 article h1{
-  font-size: 4rem;
+  font-size: 2.5rem;
+  text-align: left;
 }
 article strong{
   font-size: larger;
