added overlay and cta buttons on all articles

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,23 @@
 
 }
 
+.heroh2{
+  color: white;
+}
+
+.herop{
+  color: white;
+}
+
+.articletext{
+  display: grid;
+  grid-gap: 1rem;
+  text-align: left;
+  margin-left: 1rem;
+  position: absolute;
+  top: 35px;
+ 
+}
 
 
  .btn{
@@ -16,8 +33,22 @@
     margin: 0 auto;
     color: white;
     text-decoration: none;
+    text-align: center;
      
  }
+
+ .cta-btn{
+  border: 2px solid purple;
+  background: purple;
+  border-radius: 50px;
+  padding: 1rem;
+  width: 50%;
+  margin: 0 auto;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+   
+}
 
 /* SPLASH SECTION START  */
 
@@ -197,28 +228,15 @@
   }
   
   .grid-image-top {
-    height: 45%;
-    width: 120%;
-    background-size: cover;
-    position: relative;
-    background-position: 50% 50%;
-    left: -10.5%;
-    top: -4.5%;
-    display: none;
+    
+      height: 100%;
+      width: 100%;
+      background: purple;
+      filter: opacity(0.5);
+      background-size: cover;
+    
   }
   
-  .grid-image-top .centered {
-    text-align: center;
-    transform: translate(-50%, -50%);
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 54.5%;
-    left: 50%;
-    width: 60%;
-    height: 60%;
-    background-position: center;
-  }
   
   .rex-ray-image {
     background-image: url(/img/Frame120.png);
@@ -233,7 +251,7 @@
     background-repeat: no-repeat;
   }
   
-  .edgex-image {
+  .add-image {
     background-image: url(/img/add.png);
     background-size: contain;
     background-position: center;
@@ -415,6 +433,19 @@
 
     .splashwrapper h2{
         font-size: 3rem;
+    }
+
+    .cta-btn{
+      border: 2px solid purple;
+      background: purple;
+      border-radius: 50px;
+      padding: 1rem;
+      width: 50%;
+      margin: 0;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+       
     }
   
   }
