--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,17 @@
    
 }
 
+.text-gradient{
+  background: -webkit-linear-gradient(rgb(68, 0, 255), rgb(255, 19, 137));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gradient{
+background: rgb(255,0,99);
+background: linear-gradient(90deg, rgba(255,0,99,1) 0%, rgba(70,0,184,0.05) 0%, rgba(255,0,99,0.33) 100%);
+}
+
 /* SPLASH SECTION START  */
 
 #splashsection {
@@ -147,7 +158,7 @@
     background: rgba(0, 0, 0, 0.5);
   }
   .bannerwrapper .text {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       color: white;
       text-shadow: 0.1em 0.1em 0.5em rgb(0 0 0 / 50%);
       margin: 0;
@@ -165,7 +176,9 @@
   }
 
   .bannerwrapper .text p strong {
-      color: purple;
+    background: -webkit-linear-gradient(rgb(68, 0, 255), rgb(255, 19, 137));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
  /* SUBSCRIBE BANNER END  */
