--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.active{
+  font-weight: 600;
+  
+}
+
 article{
   margin-left: 11px;
   margin-right: 11px;
