--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,12 @@
      
  }
 
+ .btn-gradient{
+   border: none;
+  background: rgb(255,0,99);
+  background: linear-gradient(90deg, rgb(67, 0, 160) 15%, rgba(71, 0, 184, 0.479) 30%, rgba(255,0,99) 100%);
+}
+
  .cta-btn{
   border: 2px solid purple;
   background: purple;
@@ -436,8 +442,7 @@ background: linear-gradient(90deg, rgba(255,0,99,1) 0%, rgba(70,0,184,0.05) 0%, 
     }
 
     .bannerwrapper .btn {
-        border: 2px solid purple;
-        background: purple;
+       
         border-radius: 50px;
         padding: 1rem;
         width: 24%;
